--- a/angular.json
+++ b/angular.json
@@ -40,7 +40,11 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss"],
+            "styles": ["src/styles.scss",
+               "node_modules/primeicons/primeicons.css",
+                "node_modules/primeng/resources/themes/lara-light-indigo/theme.css",
+                "node_modules/primeng/resources/primeng.min.css"
+            ],
             "scripts": []
           },
           "configurations": {
