--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "pixowor-ui",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "build:library": "ng build pixowor-ui-library"
+    "build:library": "ng build pixowor-ui-library",
+    "build:library:prod": "ng build pixowor-ui-library-prod"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "~13.1.0",
     "@angular/cdk": "^13.2.2",
